# mcp-server-analysis

./: .coverage  .gitignore  PROJECT_SUMMARY.md  README.md  main.py  pyproject.toml
.cursor/rules/: architecture.mdc  cli.mdc  code-style.mdc  documentation.mdc  git.mdc  package-management.mdc  python.mdc  tech-stack.mdc
scripts/: __init__.py  analyze_mcp_servers.py
src/: __init__.py
src/common/: __init__.py
src/common/services/: __init__.py  data_processor.py  github_api.py  mcp_registry.py  visualization.py
tests/: __init__.py  test_data_processor.py  test_github_api.py  test_mcp_registry.py  test_visualization.py
