[project]
name = "mcp-server-analysis"
version = "0.1.0"
description = "Analysis tool for visualizing MCP server activity vs popularity"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.0.0",
    "seaborn>=0.12.0",
    "matplotlib>=3.7.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.1.0",
]
